mynginx_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mynginx-ingress
  labels:
    name: mynginx-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mynginx-svc
            port: 
              number: 8080
